# tech-challenge-fase2-recsys

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: params.yaml
docs/: ml_canvas.md  model_card.md  monitoring_plan.md  video_star.md
reports/: metrics.json
scripts/: promote_model.py  validate_env.py
src/recsys/: __init__.py
src/recsys/config/: __init__.py  settings.py
src/recsys/data/: __init__.py  download.py  preprocess.py
src/recsys/evaluation/: __init__.py  evaluator.py  metrics.py
src/recsys/features/: __init__.py  build_features.py
src/recsys/models/: __init__.py  base.py  baselines.py  embedding_mlp.py  factory.py  persistence.py
src/recsys/pipelines/: __init__.py  build_features.py  download.py  evaluate.py  preprocess.py  train.py
src/recsys/training/: __init__.py  dataset.py  trainer.py
src/recsys/utils/: __init__.py  seed.py
tests/: test_baselines.py  test_embedding_mlp.py  test_factory.py  test_features.py  test_metrics.py  test_preprocess.py
