[tool.poetry]
name = "recsys"
version = "0.1.0"
description = "Sistema de recomendacao de produtos (embeddings + MLP) para o Tech Challenge FIAP Fase 02"
authors = ["Marco <marcoaadc@gmail.com>"]
readme = "README.md"
packages = [{ include = "recsys", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0"
scikit-learn = "^1.3"
pandas = "^2.0"
numpy = "^1.24"
mlflow = "^2.10"
dvc = "^3.30"
pydantic-settings = "^2.0"
pyyaml = "*"
pyarrow = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
ruff = ">=0.4"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["recsys"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
